--- a/colourGame.css
+++ b/colourGame.css
@@ -71,3 +71,16 @@ button:hover{
     display: inline-block;
     width: 20%;
 }
+
+@media only screen and (max-width: 768px) {
+    button{
+        font-size: 0.8em;
+    }
+} 
+
+
+@media only screen and (min-width: 768px) {
+    button{
+        font-size: 1em;
+    }
+} 
