--- a/colourGame.css
+++ b/colourGame.css
@@ -30,6 +30,7 @@ h1{
     text-transform: uppercase;
     line-height: 1.1;
     padding: 20px 0;
+    transition: 0.6s;
 }
 
 #stripe{
@@ -73,14 +74,14 @@ button:hover{
 }
 
 @media only screen and (max-width: 768px) {
-    button{
-        font-size: 0.8em;
+    button, #message{
+        font-size: 0.6em;
     }
 } 
 
 
 @media only screen and (min-width: 768px) {
-    button{
+    button, #message{
         font-size: 1em;
     }
 }
